@@ -18,7 +18,7 @@ rdfns - look up common URI namespaces and prefixes
 
 =head1 VERSION
 
-version 20140901
+version 20140908
 
 =head1 SYNOPSIS
 
