@@ -1,3 +1,7 @@
+20140908 2014-098  (1414 prefixes)
+ - added:   abs article cdc opencyc smg
+ - new module RDF::SN to abbreviate URIs
+
 20140901 2014-091  (1409 prefixes)
  - added:   aat accom acrt agrd agro app asgv aws babelnet basic bbccms
             bbccore bbcprov bco bevon bihap bis bk bwb call citof cjr cmd
